--- a/sass/pages/page.scss
+++ b/sass/pages/page.scss
@@ -155,11 +155,50 @@ body {
 .ball-content {
   position: relative;
   z-index: 1;
-  top: 17vh;
+  top: 10vh;
 }
 
 .text-center {
   font-family: "Creepster", cursive;
   font-size: 3em;
   text-align: center;
+}
+
+.text-content {
+  font-family: "Courgette", cursive;
+  max-width: 250px;
+  text-align: center;
+  font-size: 1em;
+}
+
+.inputBall {
+  position: relative;
+  width: 25vh;
+  padding: 2vh;
+  border: none;
+  background: rgba(255, 255, 255, 0.623);
+  font-family: "Courgette", cursive;
+  font-size: 1em;
+  border-radius: 2vh;
+}
+
+.btn {
+  position: relative;
+  top: 2vh;
+  left: 95%;
+  padding: 0.6em;
+  border: 1px solid #00bfff;
+  background: #00bfff;
+  color: #000;
+  font-family: "Courgette", cursive;
+  font-weight: bold;
+  font-size: 1em;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.btn:hover {
+  background: #fff;
+  border: none;
+  box-shadow: 0 0 10px 1px #00bfff inset, 0 0 10px 1px #00bfff;
 }
