--- a/sass/pages/page.scss
+++ b/sass/pages/page.scss
@@ -154,6 +154,8 @@ body {
 
 .ball-content {
   position: relative;
+  background: rgba(255, 255, 255, 0.237);
+  border-radius: 50%;
   z-index: 1;
   top: 10vh;
 }
@@ -186,6 +188,7 @@ body {
   position: relative;
   top: 2vh;
   left: 95%;
+  border-radius: 5px;
   padding: 0.6em;
   border: 1px solid #00bfff;
   background: #00bfff;
@@ -201,4 +204,105 @@ body {
   background: #fff;
   border: none;
   box-shadow: 0 0 10px 1px #00bfff inset, 0 0 10px 1px #00bfff;
+}
+
+@media (max-width: 1280px) {
+  .cristalImg {
+    width: 35%;
+    height: auto;
+    top: 2vh;
+  }
+
+  .ball-content {
+    top: 10vh;
+  }
+
+  .text-center {
+    font-size: 2.8em;
+  }
+
+  .text-content {
+    font-size: 1em;
+  }
+
+  .inputBall {
+    width: 35vh;
+    padding: 1.5vh;
+    border-radius: 5px;
+  }
+
+  .btn {
+    left: 95%;
+  }
+}
+@media (max-width: 550px) {
+  .cristalImg {
+    width: 450px;
+    top: 10vh;
+  }
+
+  .ball-content {
+    top: 15vh;
+  }
+
+  .text-center {
+    font-size: 2.5em;
+  }
+
+  .text-content {
+    font-size: 0.9em;
+  }
+
+  .btn {
+    left: 85%;
+  }
+}
+@media (max-width: 425px) {
+  .cristalImg {
+    width: 380px;
+    top: 10vh;
+  }
+
+  .text-center {
+    font-size: 1.9em;
+  }
+  .inputBall {
+    left: 20px;
+    width: 21vh;
+    padding: 1vh;
+    border-radius: 5px;
+  }
+  .btn {
+    left: 95%;
+    padding: 0.5em;
+  }
+}
+@media (max-width: 375px) {
+  .cristalImg {
+    width: 300px;
+    top: 10vh;
+  }
+
+  .ball-content {
+    top: 15vh;
+  }
+
+  .text-center {
+    font-size: 1.6em;
+  }
+
+  .text-content {
+    font-size: 0.8em;
+  }
+
+  .inputBall {
+    width: 30vh;
+  }
+
+  .btn {
+    left: 115%;
+    top: 1vh;
+    font-size: 0.9em;
+    padding: 0.4em;
+  }
 }
