--- a/sass/pages/page.scss
+++ b/sass/pages/page.scss
@@ -142,7 +142,6 @@ body {
   flex-direction: column;
   align-items: center;
   margin-top: 15vh;
-  position: relative;
 }
 
 .cristalImg {
@@ -154,9 +153,12 @@ body {
 
 .ball-content {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   background: rgba(255, 255, 255, 0.237);
   border-radius: 50%;
-  z-index: 1;
   top: 10vh;
 }
 
@@ -197,7 +199,7 @@ body {
   font-weight: bold;
   font-size: 1em;
   cursor: pointer;
-  transition: 0.4s;
+  transition: 0.4s ease-in-out;
 }
 
 .btn:hover {
@@ -250,5 +252,37 @@ body {
   .btn {
     left: 95%;
     padding: 0.5em;
+  }
+}
+@media (max-width: 375px) {
+  .cristalImg {
+    width: 300px;
+    top: 20vh;
+  }
+
+  .ball-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    top: 8vh;
+  }
+
+  .text-center {
+    font-size: 1.6em;
+  }
+
+  .text-content {
+    font-size: 0.8em;
+  }
+
+  .inputBall {
+    width: 22vh;
+  }
+
+  .btn {
+    font-size: 0.9em;
+    padding: 0.4em;
+    left: 8vh;
   }
 }
