--- a/css/style.css
+++ b/css/style.css
@@ -8,268 +8,202 @@ body {
   background-image: url("../../img/fundo.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 150vh;
 }
 
-.circles {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+.container {
+  display: flex;
+  align-items: center;
 }
 
-.circles li {
-  position: absolute;
-  display: block;
-  list-style: none;
-  width: 10px;
-  height: 10px;
-  background: rgba(19, 116, 212, 0.445);
-  animation: animate 25s linear infinite;
-  border-radius: 50%;
-  bottom: -150px;
-}
-
-.circles li:nth-child(1) {
-  left: 25%;
-  width: 10px;
-  height: 10px;
-  background: rgba(48, 17, 148, 0.482);
-  border-radius: 50%;
-  animation-delay: 0s;
-}
-
-.circles li:nth-child(2) {
-  left: 10%;
-  width: 20px;
-  height: 20px;
-  background: rgba(248, 248, 246, 0.65);
-  border-radius: 50%;
-  animation-delay: 1s;
-  animation-duration: 15s;
-}
-
-.circles li:nth-child(3) {
-  left: 70%;
-  width: 10px;
-  height: 10px;
-  background: rgba(247, 247, 175, 0.919);
-  border-radius: 50%;
-  animation-delay: 4s;
-}
-
-.circles li:nth-child(4) {
-  left: 40%;
-  width: 19px;
-  height: 19px;
-  background: rgba(108, 167, 226, 0.65);
-  border-radius: 50%;
-  animation-delay: 0s;
-  animation-duration: 18s;
-}
-
-.circles li:nth-child(5) {
-  left: 65%;
-  width: 13px;
-  height: 13px;
-  border-radius: 50%;
-  animation-delay: 0s;
-}
-
-.circles li:nth-child(6) {
-  left: 75%;
-  width: 11px;
-  height: 11px;
-  background: rgba(248, 248, 246, 0.65);
-  border-radius: 50%;
-  animation-delay: 3s;
-}
-
-.circles li:nth-child(7) {
-  left: 35%;
-  width: 6px;
-  height: 16px;
-  background: rgba(242, 37, 43, 0.489);
-  border-radius: 50%;
-  animation-delay: 7s;
-}
-
-.circles li:nth-child(8) {
-  left: 50%;
-  width: 4px;
-  height: 4px;
-  border-radius: 50%;
-  animation-delay: 15s;
-  animation-duration: 45s;
-}
-
-.circles li:nth-child(9) {
-  left: 20%;
-  width: 7px;
-  height: 7px;
-  border-radius: 50%;
-  animation-delay: 2s;
-  animation-duration: 35s;
-}
-
-.circles li:nth-child(10) {
-  left: 85%;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  animation-delay: 0s;
-  animation-duration: 11s;
-}
-
-@keyframes animate {
-  0% {
-    transform: translateY(0) rotate(180deg);
-    opacity: 1;
-    border-radius: 50%;
-  }
-  100% {
-    transform: translateY(-1000px) rotate(720deg);
-    opacity: 0;
-    border-radius: 50%;
-  }
-}
 .ball {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  margin-top: 15vh;
 }
 
 .cristalImg {
-  position: absolute;
   max-width: 950px;
-  width: 550px;
+  width: 95%;
   height: auto;
+  margin-top: 20vh;
+  z-index: 0;
 }
 
 .ball-content {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  background: rgba(255, 255, 255, 0.237);
-  border-radius: 50%;
-  top: 10vh;
+  align-content: center;
+  justify-content: center;
+  z-index: 0;
+  margin-top: -100vh;
+  position: relative;
 }
 
-.text-center {
+.text-title {
   font-family: "Creepster", cursive;
-  font-size: 3em;
+  font-size: 4em;
   text-align: center;
+  color: #000;
 }
 
 .text-content {
   font-family: "Courgette", cursive;
-  max-width: 250px;
+  max-width: 450px;
   text-align: center;
-  font-size: 1em;
+  font-size: 2em;
+  color: #000;
 }
 
 .inputBall {
-  position: relative;
-  width: 25vh;
+  width: 100%;
   padding: 2vh;
   border: none;
   background: rgba(255, 255, 255, 0.623);
   font-family: "Courgette", cursive;
   font-size: 1em;
   border-radius: 2vh;
+  margin-top: 100vh;
+  position: relative;
 }
 
-.btn {
-  position: relative;
-  top: 2vh;
-  left: 95%;
+.button {
   border-radius: 5px;
-  padding: 0.6em;
+  margin-top: 1vh;
+  padding: 1em;
   border: 1px solid #00bfff;
   background: #00bfff;
   color: #000;
   font-family: "Courgette", cursive;
   font-weight: bold;
-  font-size: 1em;
+  font-size: 1.3em;
   cursor: pointer;
   transition: 0.4s ease-in-out;
 }
 
-.btn:hover {
+.button:hover {
   background: #fff;
   border: none;
   box-shadow: 0 0 10px 1px #00bfff inset, 0 0 10px 1px #00bfff;
 }
 
-@media (max-width: 550px) {
-  .cristalImg {
-    width: 450px;
+@media (max-width: 880px) {
+  .ball-content {
     top: 15vh;
   }
-  .ball-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    top: 5vh;
+  .inputBall {
+    top: -15vh;
   }
-  .text-center {
+}
+@media (max-width: 731px) {
+  .ball-content {
+    top: 20vh;
+  }
+  .inputBall {
+    top: -20vh;
+  }
+}
+@media (max-width: 672px) {
+  .ball-content {
+    top: 25vh;
+  }
+  .text-title {
+    font-size: 3em;
+  }
+  .text-content {
+    font-size: 1.7em;
+  }
+  .inputBall {
+    top: -25vh;
+  }
+}
+@media (max-width: 639px) {
+  .ball-content {
+    top: 28vh;
+  }
+  .inputBall {
+    top: -28vh;
+  }
+}
+@media (max-width: 609px) {
+  .ball-content {
+    top: 34vh;
+  }
+  .inputBall {
+    top: -34vh;
+  }
+}
+@media (max-width: 569px) {
+  .ball-content {
+    top: 38vh;
+  }
+  .text-title {
     font-size: 2.5em;
   }
   .text-content {
-    font-size: 0.9em;
+    font-size: 1.5em;
   }
-  .btn {
-    left: 85%;
+  .inputBall {
+    top: -38vh;
+  }
+  .button {
+    padding: 0.1em;
   }
 }
 @media (max-width: 425px) {
-  .cristalImg {
-    width: 380px;
-  }
-  .text-center {
-    font-size: 1.9em;
-  }
-  .inputBall {
-    width: 21vh;
-    padding: 1vh;
-    border-radius: 5px;
-  }
-  .btn {
-    left: 95%;
-    padding: 0.5em;
-  }
-}
-@media (max-width: 380px) {
-  .cristalImg {
-    width: 300px;
-    top: 20vh;
-  }
   .ball-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    top: 8vh;
+    top: 53vh;
   }
-  .text-center {
-    font-size: 1.6em;
+  .text-title {
+    font-size: 2em;
   }
   .text-content {
+    max-width: 270px;
+    font-size: 1em;
+  }
+  .inputBall {
+    top: -53vh;
+  }
+  .button {
+    padding: 0.1em;
+  }
+}
+@media (max-width: 375px) {
+  .ball-content {
+    top: 58vh;
+  }
+  .text-title {
+    font-size: 2em;
+  }
+  .text-content {
+    max-width: 230px;
     font-size: 0.8em;
   }
   .inputBall {
-    width: 22vh;
+    top: -58vh;
+    padding: 0.5em;
   }
-  .btn {
-    font-size: 0.9em;
-    padding: 0.4em;
-    left: 8vh;
+  .button {
+    padding: 0.1em;
+  }
+}
+@media (max-width: 320px) {
+  .ball-content {
+    top: 65vh;
+  }
+  .text-title {
+    font-size: 2em;
+  }
+  .text-content {
+    max-width: 230px;
+    font-size: 0.7em;
+  }
+  .inputBall {
+    top: -65vh;
+    padding: 0.5em;
+  }
+  .button {
+    padding: 0.1em;
   }
 }
 
