--- a/sass/pages/page.scss
+++ b/sass/pages/page.scss
@@ -75,6 +75,11 @@ body {
 
 
 @media (max-width:380px){
+
+  .container {
+    margin: 2rem;    
+  }
+  
   .text-title {      
     font-size: 2rem;   
   }
