--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,16 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: rgba(144, 19, 254, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
+  background: url("../../img/cristal.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  /*background: rgba( 144, 19, 254, 0.25 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
   border-radius: 50%;
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border: 1px solid rgba( 255, 255, 255, 0.18 );*/
 }
 
 .text-title {
